[package]
name = "xrpl_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
uuid = { version = "1" }
anyhow = "1.0"
libc = "0.2" 
tokio-tungstenite = "0.20"
url = "2.4"
futures-util = "0.3"